bin/testsuite/tests/compiler/src/errors/compiler2145.swg
#global testerror "Err0579"

struct(T) P
{
    const XX: P'T{0, 0}
}

#test
{
    var p: P's32
}
